A bit of UI, making it responsive. Starting to format each user's profile

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,3 +1,26 @@
-<h5><a href="/login">Login</a> or <a href="/signup">Sign up</a> to join the community!</h5>
 
-<a href="/vote">Try the voting system</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+<body>
+  <header>
+    <div class="aligner">
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Welcome to Arbitec Dispute Resolution</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Please log in to continue</h6>
+          <p class="card-text">"Mission statement"</p>
+          <a href="/login" class="card-link">Log in</a>
+          <a href="/signup" class="card-link">Sign up</a>
+        </div>
+      </div>
+    </div>
+  </header>
+</body>
+</html>
