--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
   <form >
@@ -20,9 +21,10 @@
         <label for="password">Password</label>
       </div>
     </div>
-    <button (click)="handleLogin()" type="submit" name="action">Submit
+    
+      <button (click)="handleLogin()" type="submit" name="action">Submit
      
-    </button>
+      </button>
     <!-- <button type="submit" (click)="handleSignup()">Signup</button>   -->
   </form>
  
